--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -732,12 +732,14 @@
     <bool name="config_fpCancelIfNotIdle">true</bool>
 
      <!-- Paths to the libraries that contain device specific key handlers -->
-     <string-array name="config_deviceKeyHandlerLibs" translatable="false">
+    <string-array name="config_deviceKeyHandlerLibs" translatable="false">
+        <item>/system_ext/priv-app/LineageParts/LineageParts.apk</item>
         <item>/system/priv-app/KeyHandler/KeyHandler.apk</item>
      </string-array>
 
-     <!-- Names of the key handler classes -->
-     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
-        <item>org.lineageos.keyhandler.KeyHandler</item>
-     </string-array>
+    <!-- Names of the key handler classes -->
+    <string-array name="config_deviceKeyHandlerClasses" translatable="false">
+        <item>org.lineageos.lineageparts.gestures.KeyHandler</item>
+        <item>co.aospa.keyhandler.KeyHandler</item>
+    </string-array>
 </resources>
